--- a/battleships_ui/package.json
+++ b/battleships_ui/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
     "expo": "~51.0.0",
+    "expo-clipboard": "^6.0.3",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
